# METIS-5.1.0-Modified

./: CMakeLists.txt  Makefile  README.md  Windows11.md  linux.md
GKlib/: CMakeLists.txt  GKlibSystem.cmake  gk_arch.h  gk_getopt.h  gk_mkblas.h  gk_mkmemory.h  gk_mkpqueue.h  gk_mkpqueue2.h  gk_mkrandom.h  gk_mkutils.h  gk_proto.h
compile/windows11/: VS2022-shared.txt  VS2022-static.txt  oneAPI-shared.txt  oneAPI-static.txt
include/: CMakeLists.txt  metis.h  metis.h.in  metis_def.h
libmetis/: CMakeLists.txt  gklib_defs.h  proto.h
programs/: CMakeLists.txt  io.c  proto.h
